{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 171,
  "lineage": "e6464890-eeb2-aad1-0f96-c1c8965ed9ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "terrasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0fe62cae9d24088e7",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe62cae9d24088e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "All in",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c74c27c9dc7ed06",
            "association_id": "eipassoc-08e1f233570b3048b",
            "domain": "vpc",
            "id": "eipalloc-02c74c27c9dc7ed06",
            "network_border_group": "us-east-1",
            "network_interface": "eni-077874fcb0c246ee8",
            "private_dns": "ip-10-0-0-225.ec2.internal",
            "private_ip": "10.0.0.225",
            "public_dns": "ec2-44-213-49-231.compute-1.amazonaws.com",
            "public_ip": "44.213.49.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "afish-NAT_EIP"
            },
            "tags_all": {
              "Name": "afish-NAT_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf04b436c94d7f7",
            "arn": "arn:aws:ec2:us-east-1:782863115905:instance/i-0e65b601b56374e75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e65b601b56374e75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AFishK",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df0df46293391f9e",
            "private_dns": "ip-10-0-0-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.254",
            "public_dns": "ec2-3-90-165-27.compute-1.amazonaws.com",
            "public_ip": "3.90.165.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bea79e1e652f9fd5",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2e3d88939b93401",
            "tags": {
              "Name": "afish-EC2"
            },
            "tags_all": {
              "Name": "afish-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe62cae9d24088e7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_default_security_group.terrasg",
            "aws_subnet.pubsub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-0d44c5a0ffda21bc0",
            "id": "igw-0d44c5a0ffda21bc0",
            "owner_id": "782863115905",
            "tags": {
              "Name": "afish-IGW"
            },
            "tags_all": {
              "Name": "afish-IGW"
            },
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terranat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c74c27c9dc7ed06",
            "connectivity_type": "public",
            "id": "nat-0346ea47e4be35e3e",
            "network_interface_id": "eni-077874fcb0c246ee8",
            "private_ip": "10.0.0.225",
            "public_ip": "44.213.49.231",
            "subnet_id": "subnet-0c2e3d88939b93401",
            "tags": {
              "Name": "afish-NGW"
            },
            "tags_all": {
              "Name": "afish-NGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.pubsub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e71e9b6e2d17cada1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0346ea47e4be35e3e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e71e9b6e2d17cada",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.terranat",
            "aws_route_table.private",
            "aws_subnet.pubsub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d44c5a0ffda21bc0",
            "id": "r-rtb-0f68afa8e45fd502b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f68afa8e45fd502b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraigw",
            "aws_route_table.public",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0e71e9b6e2d17cada",
            "id": "rtb-0e71e9b6e2d17cada",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0346ea47e4be35e3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "afish-PriRT"
            },
            "tags_all": {
              "Name": "afish-PriRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0f68afa8e45fd502b",
            "id": "rtb-0f68afa8e45fd502b",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d44c5a0ffda21bc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "afish-PubRT"
            },
            "tags_all": {
              "Name": "afish-PubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3f46b2df4dba709",
            "route_table_id": "rtb-0e71e9b6e2d17cada",
            "subnet_id": "subnet-0d1a0aa01f552fa8b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.prisub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063c2d8bde469b2c",
            "route_table_id": "rtb-0e71e9b6e2d17cada",
            "subnet_id": "subnet-0531ad4cdfc9920cb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.prisub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011d303912b37857b",
            "route_table_id": "rtb-0f68afa8e45fd502b",
            "subnet_id": "subnet-0c2e3d88939b93401"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pubsub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00845c814ae2934db",
            "route_table_id": "rtb-0f68afa8e45fd502b",
            "subnet_id": "subnet-07c975b893154e485"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pubsub",
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0d1a0aa01f552fa8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1a0aa01f552fa8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "afish-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "afish-Private-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "dependencies": [
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0531ad4cdfc9920cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0531ad4cdfc9920cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "afish-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "afish-Private-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "dependencies": [
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0c2e3d88939b93401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2e3d88939b93401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "afish-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "afish-Public-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "dependencies": [
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-07c975b893154e485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c975b893154e485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "afish-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "afish-Public-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-0a991efdb38a913e2"
          },
          "dependencies": [
            "aws_vpc.terravpc",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-0a991efdb38a913e2",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf8ec1081dea7c80",
            "default_route_table_id": "rtb-0fda2430623e83601",
            "default_security_group_id": "sg-0fe62cae9d24088e7",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a991efdb38a913e2",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08ced83615ebc97b3",
            "ipv6_cidr_block": "2600:1f10:4cd6:8300::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fda2430623e83601",
            "owner_id": "782863115905",
            "tags": {
              "Name": "afish-VPC"
            },
            "tags_all": {
              "Name": "afish-VPC"
            }
          }
        }
      ]
    }
  ]
}